Connecting database with the backend and mapping entities

--- a/RecipeForum_backend/src/main/resources/application.yaml
+++ b/RecipeForum_backend/src/main/resources/application.yaml
@@ -3,7 +3,8 @@ spring:
     url: jdbc:sqlite:recipe.db
     driver-class-name: org.sqlite.JDBC
   jpa:
+    database-platform: org.hibernate.community.dialect.SQLiteDialect
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     show-sql: true
     open-in-view: false
