--- a/RecipeForum_backend/pom.xml
+++ b/RecipeForum_backend/pom.xml
@@ -43,6 +43,10 @@
       <groupId>org.xerial</groupId>
       <artifactId>sqlite-jdbc</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.hibernate.orm</groupId>
+      <artifactId>hibernate-community-dialects</artifactId>
+    </dependency>
 
     <dependency>
       <groupId>org.mapstruct</groupId>
