--- a/RecipeForum_backend/src/main/resources/application.yaml
+++ b/RecipeForum_backend/src/main/resources/application.yaml
@@ -5,6 +5,6 @@ spring:
   jpa:
     database-platform: org.hibernate.community.dialect.SQLiteDialect
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     show-sql: true
     open-in-view: false
