--- a/RecipeForum_backend/src/main/resources/application.yaml
+++ b/RecipeForum_backend/src/main/resources/application.yaml
@@ -3,6 +3,7 @@ spring:
     url: jdbc:sqlite:recipe.db
     driver-class-name: org.sqlite.JDBC
   jpa:
+    database-platform: org.hibernate.community.dialect.SQLiteDialect
     hibernate:
       ddl-auto: update
     show-sql: true
