Added cookie-auth service. Added server-based swagger docs, not used yet.

--- a/RecipeForum_frontend/RecipeForum_frontend/RecipeForum_frontend.csproj
+++ b/RecipeForum_frontend/RecipeForum_frontend/RecipeForum_frontend.csproj
@@ -6,15 +6,24 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <ServiceWorkerAssetsManifest>service-worker-assets.js</ServiceWorkerAssetsManifest>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Remove="Swagger\swagger.json" />
+  </ItemGroup>
 	<ItemGroup>
-		<OpenApiReference Include="Swagger\swagger.json" CodeGenerator="NSwagCSharp" ClassName="SwaggerClient" Namespace="RecipeForum_frontend.Generated" />
+		<!--<OpenApiReference Include="OpenAPIs\api-docs.json" Namespace="RecipeForum_frontend.Generated" ClassName="SwaggerClient">
+		  <SourceUri>http://localhost:8080/v3/api-docs</SourceUri>
+		</OpenApiReference>-->
+		
+		<OpenApiReference Include="Swagger\swagger.json" Namespace="RecipeForum_frontend.Generated" ClassName="SwaggerClient" />
+		<None Include="Swagger\swagger.json" ClassName="SwaggerClient" />
 	</ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Blazor.ContextMenu" Version="2.1.0" />
     <PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
     <PackageReference Include="bootstrap" Version="5.3.8" />
-    <PackageReference Include="Microsoft.AspNetCore.Authorization" Version="8.0.19" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="8.0.19" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.19" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.19" PrivateAssets="all" />
     <PackageReference Include="Microsoft.Extensions.ApiDescription.Client" Version="8.0.14">
@@ -34,5 +43,9 @@
 
   <ItemGroup>
     <ServiceWorker Include="wwwroot\service-worker.js" PublishedContent="wwwroot\service-worker.published.js" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Infrastructure\Models\" />
   </ItemGroup>
 </Project>
