--- a/RecipeForum_backend/pom.xml
+++ b/RecipeForum_backend/pom.xml
@@ -48,6 +48,13 @@
       <artifactId>hibernate-community-dialects</artifactId>
     </dependency>
 
+      <dependency>
+          <groupId>org.jmock</groupId>
+          <artifactId>jmock-junit5</artifactId>
+          <version>2.13.1</version>
+          <scope>test</scope>
+      </dependency>
+
     <dependency>
       <groupId>org.mapstruct</groupId>
       <artifactId>mapstruct</artifactId>
