--- a/RecipeForum_backend/src/main/resources/application.yaml
+++ b/RecipeForum_backend/src/main/resources/application.yaml
@@ -1,9 +1,11 @@
 spring:
   datasource:
-    url: jdbc:sqlite:recipe.db
-    driver-class-name: org.sqlite.JDBC
+    url: jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME}?useSSL=false&serverTimezone=Europe/Budapest
+    username: ${DB_USER}
+    password: ${DB_PASS}
+    driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
-    database-platform: org.hibernate.community.dialect.SQLiteDialect
+    database-platform: org.hibernate.dialect.MySQL8Dialect
     hibernate:
       ddl-auto: validate
     show-sql: true
